# ianaio-web-starter

./: .firebaserc  .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  firebase.json  new-design-workflow.dot  update-readmes.sh
.github/: dependabot.yml  lint-fmt.yml
.github/ISSUE_TEMPLATE/: bug_report.md  propose_design.md
.github/workflows/: build-website.yml  lint-fmt.yml  publish-website.yml  tests.yml
crates/console/: Cargo.toml  README.md
crates/console/src/: console_dbg.rs  counter.rs  externs.rs  lib.rs  macros.rs  timers.rs
crates/console/tests/: web.rs
crates/dialogs/: Cargo.toml  README.md
crates/dialogs/src/: lib.rs
crates/events/: Cargo.toml  README.md
crates/events/src/: lib.rs
crates/events/tests/: web.rs
crates/file/: Cargo.toml  README.md
crates/file/src/: blobs.rs  file_list.rs  file_reader.rs  lib.rs  object_url.rs
crates/file/tests/: web.rs
crates/history/: Cargo.toml  README.md
crates/history/src/: any.rs  browser.rs  error.rs  hash.rs  history.rs  lib.rs  listener.rs  location.rs  memory.rs  state.rs  utils.rs
crates/history/tests/: browser_history.rs  browser_history_feat_serialize.rs  hash_history.rs  hash_history_feat_serialize.rs  memory_history.rs  memory_history_feat_serialize.rs  utils.rs
crates/net/: Cargo.toml  README.md
crates/net/src/: error.rs  lib.rs
crates/net/src/eventsource/: futures.rs  mod.rs
crates/net/src/http/: headers.rs  mod.rs  query.rs  request.rs  response.rs
crates/net/src/websocket/: events.rs  futures.rs  mod.rs
crates/render/: Cargo.toml  README.md
crates/render/src/: lib.rs
crates/storage/: Cargo.toml  README.md
crates/storage/src/: errors.rs  lib.rs  local_storage.rs  session_storage.rs
crates/storage/tests/: local_storage.rs  session_storage.rs
crates/timers/: Cargo.toml  README.md
crates/timers/src/: callback.rs  future.rs  lib.rs
crates/timers/tests/: node.rs  web.rs
crates/utils/: Cargo.toml  README.md
crates/utils/src/: errors.rs  iter.rs  lib.rs
crates/utils/src/format/: json.rs
crates/worker/: Cargo.toml  README.md
crates/worker-macros/: Cargo.toml  README.md
crates/worker-macros/src/: worker_fn.rs
crates/worker-macros/tests/oneshot/: basic-pass.rs  many_input-fail.rs  many_input-fail.stderr  no_input-fail.rs  sync-pass.rs
crates/worker-macros/tests/reactor/: basic-pass.rs  many_input-fail.rs  many_input-fail.stderr  return_type-fail.rs  return_type-fail.stderr  sync-fail.rs  sync-fail.stderr
crates/worker/src/: codec.rs  lib.rs  traits.rs
crates/worker/src/actor/: bridge.rs  scope.rs  spawner.rs
crates/worker/src/oneshot/: bridge.rs  mod.rs  registrar.rs  spawner.rs  traits.rs  worker.rs
crates/worker/src/reactor/: bridge.rs  messages.rs  mod.rs  registrar.rs  scope.rs  spawner.rs  traits.rs  worker.rs
examples/clock/: Cargo.toml  README.md  index.html
examples/clock/src/: lib.rs
examples/markdown/: Cargo.toml  README.md  index.html
examples/markdown/src/: lib.rs
examples/prime/: Cargo.toml  index.html
examples/prime/src/: lib.rs
src/: lib.rs
