[package]
name = "ianaio-web-starter-dialogs"
description = "IANA SYSTEMS crate for working with dialogs in browser"
version = "0.0.1"
authors = ["IANA SYSTEMS Rust and WebAssembly Working Group"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ianaio/ianaio-web-starter/tree/main/crates/dialogs"
homepage = "https://github.com/ianaio/ianaio-web-starter"
categories = ["api-bindings", "asynchronous", "wasm"]

[dependencies]
wasm-bindgen = "0.2.87"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window"
]

