[package]
name = "ianaio-web-starter-events"
description = "IANA SYSTEMS crate for working with DOM event listeners"
version = "0.0.1"
authors = ["IANA SYSTEMS Rust and WebAssembly Working Group"]
edition = "2021"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/ianaio/ianaio-web-starter/tree/main/crates/events"
homepage = "https://github.com/ianaio/ianaio-web-starter"
categories = ["api-bindings", "asynchronous", "web-programming", "wasm"]

[dependencies]
wasm-bindgen = "0.2.87"

[dependencies.web-sys]
version = "0.3.64"
features = [
    "Event",
    "EventTarget",
    "AddEventListenerOptions",
]

[dev-dependencies]
js-sys = "0.3.64"
futures = "0.3.28"
wasm-bindgen-test = "0.3.37"

[dev-dependencies.web-sys]
version = "0.3.64"
features = [
    "HtmlElement",
    "Window",
    "Document",
    "Element",
    "MouseEvent",
    "ProgressEvent",
]

