[package]
name = "ianaio-web-starter-file"
description = "IANA SYSTEMS crate for working with JavaScript files and blobs"
version = "0.0.1"
authors = ["IANA SYSTEMS Rust and WebAssembly Working Group"]
edition = "2021"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/ianaio/ianaio-web-starter/tree/main/crates/file"
homepage = "https://github.com/ianaio/ianaio-web-starter"
categories = ["api-bindings", "asynchronous", "wasm"]

[package.metadata.docs.rs]
features = ["futures"]

[dependencies]
wasm-bindgen = "0.2.87"
js-sys = "0.3.64"
ianaio-web-starter-events = { path = "../events", version = "0.1" }
mime = { version = "0.3.17", optional = true }
futures-channel = { version = "0.3.19", optional = true }

[dependencies.web-sys]
version = "0.3.64"
features = [
    "Blob",
    "File",
    "FileList",
    "FileReader",
    "HtmlInputElement",
    "BlobPropertyBag",
    "FilePropertyBag",
    "DomException",
    "Url",
]

[dev-dependencies]
futures_rs = { version = "0.3", package = "futures" }
wasm-bindgen-test = "0.3.37"
wasm-bindgen-futures = "0.4.25"
chrono = { version = "0.4.26", features = ["wasmbind"] }

[dev-dependencies.web-sys]
version = "0.3.64"
features = ["Window", "Response"]

[features]
default = []
futures = ["futures-channel"]

