[package]
name = "ianaio-web-starter-history"
version = "0.0.1"
description = "IANA SYSTEMS Universal Session History"
authors = ["IANA SYSTEMS Rust and WebAssembly Working Group"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ianaio/ianaio-web-starter/tree/main/crates/history"
homepage = "https://github.com/ianaio/ianaio-web-starter"
categories = ["api-bindings", "history", "wasm"]

[dependencies]
wasm-bindgen = "0.2.87"
ianaio-web-starter-utils = { version = "0.0.1", path = "../utils" }
ianaio-web-starter-events = { version = "0.0.1", path = "../events" }
serde = "1"
serde-wasm-bindgen = "0.5.0"
serde_urlencoded = { version = "0.7.1", optional = true }
thiserror = { version = "1.0", optional = true }

[dependencies.web-sys]
version = "0.3.64"
features = [
    "History",
    "Window",
    "Location",
    "Url",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.37"
serde = { version = "1", features = ["derive"] }
ianaio-web-starter-timers = { version = "0.0.1", features = ["futures"], path = "../timers" }

[features]
query = ["thiserror", "serde_urlencoded"]
default = ["query"]

