[package]
name = "ianaio-web-starter-storage"
description = "IANA SYSTEMS crate for working with local and session storage in browser"
version = "0.0.1"
authors = ["IANA SYSTEMS Rust and WebAssembly Working Group"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ianaio/ianaio-web-starter/tree/main/crates/storage"
homepage = "https://github.com/ianaio/ianaio-web-starter"
categories = ["api-bindings", "storage", "wasm"]

[dependencies]
wasm-bindgen = "0.2.87"
serde = "1.0"
serde_json = "1.0.1"
thiserror = "1.0"
js-sys = "0.3.55"
ianaio-web-starter-utils = { version = "0.1", path = "../utils" }
[dependencies.web-sys]
version = "0.3.64"
features = [
    "Storage",
    "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.37"
serde = { version = "1.0", features = ["derive"] }

