[package]
name = "ianaio-web-starter-timers"
description = "IANA SYSTEMS crate for working with JavaScript timers"
version = "0.0.1"
authors = ["IANA SYSTEMS Rust and WebAssembly Working Group"]
edition = "2021"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/ianaio/ianaio-web-starter/tree/main/crates/timers"
homepage = "https://github.com/ianaio/ianaio-web-starter"
categories = ["api-bindings", "asynchronous", "wasm"]

[package.metadata.docs.rs]
features = ["futures"]

[dependencies]
wasm-bindgen = "0.2.87"
js-sys = "0.3.55"
futures-core = { version = "0.3.28", optional = true }
futures-channel = { version = "0.3.19", optional = true }

[features]
default = []
futures = ["futures-core", "futures-channel"]


[dev-dependencies]
wasm-bindgen-futures = "0.4.26"
wasm-bindgen-test = "0.3.37"
futures-util = "0.3.28"

