[package]
name = "ianaio-web-starter-worker-macros"
version = "0.0.1"
authors = ["IANA SYSTEMS Rust and WebAssembly Working Group"]
edition = "2021"
readme = "README.md"
description = "IANA SYSTEMS crate for working with Web Workers"
repository = "https://github.com/ianaio/ianaio-web-starter/tree/main/crates/worker"
homepage = "https://github.com/ianaio/ianaio-web-starter"
license = "MIT OR Apache-2.0"
categories = ["api-bindings", "asynchronous", "wasm"]

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = "1.3.1"
proc-macro2 = "1.0.66"
quote = "1.0.32"
syn = { version = "2.0.27", features = ["full"] }

[dev-dependencies]
trybuild = "1"
ianaio-web-starter = { path = "../..", features = ["futures"] }

