[package]
name = "ianaio-web-starter-worker"
version = "0.0.1"
authors = ["IANA SYSTEMS Rust and WebAssembly Working Group"]
edition = "2021"
readme = "README.md"
description = "IANA SYSTEMS crate for working with Web Workers"
repository = "https://github.com/ianaio/ianaio-web-starter/tree/main/crates/worker"
homepage = "https://github.com/ianaio/ianaio-web-starter"
license = "MIT OR Apache-2.0"
categories = ["api-bindings", "asynchronous", "wasm"]

[package.metadata.docs.rs]
all-features = true

rustdoc-args = ["--cfg", "docsrs"]


[dependencies]
bincode = "1.3.3"
ianaio-web-starter-utils = { path = "../utils", version = "0.1" }
ianaio-web-starter-worker-macros = { path = "../worker-macros", version = "0.1" }
js-sys = "0.3.64"
pinned = "0.1.0"
serde = { version = "1.0.174", features = ["derive"] }
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = { version = "0.4.25" }
futures = { version = "0.3.28", features = ["std"], default-features = false }
thiserror = "1.0.44"

[dependencies.web-sys]
version = "0.3.64"
features = [
    "Blob",
    "BlobPropertyBag",
    "DedicatedWorkerGlobalScope",
    "MessageEvent",
    "Url",
    "Worker",
    "WorkerOptions",
]

[features]
default = []
futures = []

