[package]
name = "ianaio-example-markdown"
version = "0.0.1"
authors = ["IANA SYSTEMS Rust and WebAssembly Working Group"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = { version = "0.9.3", default-features = false }
ianaio-web-starter = { path = "../..", features = ["futures"] }

console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = { version = "0.4.26" }
js-sys = "0.3.64"
wasm-bindgen-test = "0.3.37"
futures = "0.3.28"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3.5"

